Fix: Disk animation out of bounds
Adjust disk animation to stay within bounds.

--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,7 @@
     opacity: 0.9;
   }
   20% {
-    transform: translate(calc(var(--disk-start-x, 0px) - 10px), -80px) rotate(-5deg);
+    transform: translate(calc(var(--disk-start-x, 0px) - 5px), -80px) rotate(-3deg);
     opacity: 0.95;
   }
   50% {
@@ -100,7 +100,7 @@
     scale: 1.05;
   }
   80% {
-    transform: translate(calc(var(--disk-end-x, 0px) + 10px), -80px) rotate(5deg);
+    transform: translate(calc(var(--disk-end-x, 0px) + 5px), -80px) rotate(3deg);
     opacity: 0.95;
   }
   100% {
